--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,91 @@
 .App {
-  text-align: center;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.window {
+  background: #ececec;
+  height: 100vh;;
+  width: 100%;
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.right-list {
+  overflow: scroll;
+  display: inline-block;
+  width: 50%;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.left-list {
+  overflow: scroll;
+  display: inline-block;
+  width: 50%;
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  margin-top: 20px;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 2px;
+  padding-left: 15px;
+  list-style: none;
+}
+
+ul li:hover {
+  background: #ececec;
+}
+
+ul li.active{
+  background: #FFDC5A;
+}
+
+
+ul li.selected{
+  background: rgb(252, 252, 212);
+}
+
+.active {
+  background: #fff;
+}
+
+.inactive {
+  background: #DEDEDE;
+}
+
+.active-head {
+  padding: 8px;
+  height: 60px;
+  background: #333;
+  color: #fff;
+}
+
+.head {
+  padding: 8px;
+  height: 60px;
+  background: #7b7b7b;
+  color: #fff;
+}
+
+.head b {
+  top: 30px;
+}
+
+span {
+  margin-right: 10px;
+}
+
+.glyphicon-folder-close {
+  color: rgb(226, 151, 65);
+}
+
+.glyphicon-file {
+  color: rgb(12, 218, 218);
+}
+
+ul li:nth-child(1)::after {
+  content: " ..";
 }
