--- a/src/components/Panels/Menu.css
+++ b/src/components/Panels/Menu.css
@@ -1,11 +1,13 @@
 .panel {
   margin-top: 2px;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
   font-size: 17px;
   border-radius: 0;
+  box-shadow: 0 2px 6px -2px gray;
 }
 
 .panel button {
+  margin: 2px;
   margin-left: 5px;
   text-align: center;
 }
