--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,12 +13,15 @@
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #fff;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
   width: 30%;
-  height: 220px;
+  height: 230px;
+  color: #000;
+  border: 3px solid black;
+  margin-top: 100px;
 }
 
 hr {
@@ -30,7 +33,7 @@ input {
 }
 
 .close {
-  color: #aaaaaa;
+  color: #3a3a3a;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -38,11 +41,16 @@ input {
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: #333;
   text-decoration: none;
   cursor: pointer;
 }
 
 .cancel {
   float: left;
+  margin-top: 3px;
+}
+
+.lower {
+  margin-top: 30px;
 }
