--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,4 +1,5 @@
 .modal {
+  display: block;
   text-align: center;
   position: fixed;
   z-index: 1;
@@ -28,7 +29,7 @@ hr {
   margin: 5px;
 }
 
-input {
+input[type="text"] {
   width: 60%;
 }
 
@@ -57,4 +58,57 @@ input {
 
 .quot {
   color: rgb(182, 120, 28);
+}
+
+.add {
+  height: 230px;
+}
+
+.delete {
+  height: 200px;
+}
+
+.permissions {
+  height: 600px;
+}
+
+.permissions .header h3 {
+  margin-bottom: 40px;
+  font-size: 30px;
+}
+
+.permissions form {
+  margin-top: 20px;
+}
+
+.permissions form div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.permissions form div {
+  margin-bottom: 30px;
+  margin-left: 40px;
+}
+
+label {
+  display: inherit;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.permissions form div label input {
+  margin-right: 5px;
+}
+
+.permissions input[type="text"] {
+  size: 40px;
+  width: 60px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.error, .error:focus {
+  border: 1px solid red;
 }
