--- a/src/components/Lists/List.scss
+++ b/src/components/Lists/List.scss
@@ -1,23 +1,65 @@
-ul {
-  margin-top: 20px;
-  padding: 0;
+.list {
+  width: 50%;
+  height: 100vh;
+  flex: 1 1 50%;
 
-  li {
-    font-size: 20px;
-    margin-bottom: 2px;
-    padding-left: 15px;
-    list-style: none;
+  .head {
+    display: flex;
+    flex-direction: row-reverse;
+    box-shadow: 0 2px 6px -2px gray;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
 
-    &:hover{
-      background: #DEDEDE;
+    .permissions, .owner, .size, .date, .time{
+      margin-top: 5px;
+      font-weight: bolder;
+      font-size: 19px;
+      margin-left: 45px;
     }
-  }
 
-  li.active {
-    background: #FFDC5A;
-  }
+    .owner {
+      margin-left: 40px;
+    }
 
-  li.selected {
-    background: #fcfcd4;
+    .permissions {
+      margin-left: 20px;
+    }
+
+    .name {
+      margin-top: 5px;
+      font-weight: bolder;
+      font-size: 19px;
+      margin-right: 205px;
+  }
+}
+
+  .list-container {
+    margin-top: 0;
+    height: calc(100% - 115px);
+    overflow: auto;
+
+    ul {
+      margin-top: 5px;
+      padding: 0;
+    
+      li {
+        font-size: 20px;
+        margin-bottom: 2px;
+        padding-left: 15px;
+        list-style: none;
+    
+        &:hover{
+          background: #DEDEDE;
+        }
+      }
+    
+      li.active {
+        background: #FFDC5A;
+      }
+    
+      li.selected {
+        background: #fcfcd4;
+      }
+    }
   }
 }
