--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -77,7 +77,7 @@ $black: #000;
       border: 1px solid red;
     }
 
-    input {
+    input[type="text"] {
       size: 40px;
       width: 60px;
       margin-bottom: 10px;
