Refactor and hotkeys

--- a/src/components/Path/Path.scss
+++ b/src/components/Path/Path.scss
@@ -1,14 +1,14 @@
 $white: #fff;
 
 .path {
-  padding: 8px;
+  padding: 10px 0 0 10px;
   height: 60px;
   background: #7b7b7b;
   color: $white;
 }
 
 .active-path {
-  padding: 8px;
+  padding: 10px 0 0 10px;
   height: 60px;
   background: #333;
   color: $white;
