--- a/src/components/Lists/List.scss
+++ b/src/components/Lists/List.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row-reverse;
     box-shadow: 0 2px 6px -2px gray;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     padding-bottom: 5px;
 
     .permissions, .owner, .size, .date, .time{
@@ -29,7 +29,7 @@
       margin-top: 5px;
       font-weight: bolder;
       font-size: 19px;
-      margin-right: 205px;
+      margin-right: 190px;
   }
 }
 
@@ -54,6 +54,7 @@
       }
     
       li.active {
+        border-left: 5px solid rgb(121, 100, 26);
         background: #FFDC5A;
       }
     
