--- a/src/components/Lists/Row/Row.scss
+++ b/src/components/Lists/Row/Row.scss
@@ -21,6 +21,14 @@ span {
   width: 60px;
 }
 
+.fName {
+  font-size: 17px;
+  white-space: nowrap; 
+  width: 230px; 
+  overflow: hidden;
+  text-overflow: clip;
+}
+
 .fDate {
   margin-left: 30px;
 }
@@ -45,4 +53,9 @@ span {
 .unit {
   font-weight: bolder;
   color: #333;
+}
+
+.inactive {
+  border-left: 5px solid #999999;
+  background: #DEDEDE;
 }
