--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -112,3 +112,71 @@ $black: #000;
     }
   }
 }
+
+.preview-modal {
+  display: block;
+  text-align: center;
+  position: fixed;
+  z-index: 1;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $black;
+  background-color: rgba(0,0,0,0.4);
+
+  .modal-content {
+    background-color: #fff;
+    margin: auto;
+    padding: 10px 0;
+    border: 1px solid #888;
+    width: 30%;
+    height: 230px;
+    color: $black;
+    border: 3px solid $black;
+  }
+
+  .video-preview {
+    height: 95%;
+    width: 95%;
+    
+    .close {
+      z-index: 1;
+      font-size: 30px;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      opacity: 1;
+      color: #000;
+    }
+  
+    .video {
+      width: 100%;
+      height: 100%;
+  
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+
+  .photo-preview {
+    height: 95%;
+    width: 85%;
+  
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      opacity: 1;
+      color: #fff;
+    }
+  
+    .photo {
+      width: 98%;
+      height: 100%;
+    }
+  }
+}
