--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,9 +1,10 @@
-.panel {
+.btn-group {
   padding: 0;
   margin: 0;
   font-size: 17px;
   border-radius: 0;
   box-shadow: 0 2px 6px -2px gray;
+  background: #F8F9FA;
 
   button {
     margin: 2px;
@@ -12,6 +13,10 @@
 
     &:hover {
       color: rgb(1, 148, 148);
+    }
+
+    &:focus {
+      outline: none;
     }
   }
 }
