--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -120,7 +120,7 @@ $black: #000;
   text-align: center;
   position: fixed;
   z-index: 1;
-  padding-top: 60px;
+  padding-top: 10px;
   left: 0;
   top: 0;
   width: 100%;
@@ -132,8 +132,7 @@ $black: #000;
   .modal-content {
     background-color: #fff;
     margin: auto;
-    padding: 10px 0;
-    border: 1px solid #888;
+    padding: 0;
     width: 30%;
     height: 230px;
     color: $black;
@@ -149,9 +148,13 @@ $black: #000;
       font-size: 30px;
       position: absolute;
       top: 5px;
-      right: 5px;
+      right: 0;
       opacity: 1;
-      color: #000;
+      color: #fff;
+
+      &:hover {
+        color: #000;
+      }
     }
   
     .video {
@@ -165,14 +168,12 @@ $black: #000;
   }
 
   .photo-preview {
-    height: 95%;
+    height: 954px;
     width: 85%;
   
     .carousel {
-      margin-left: 60px;
-      width: 90%;
-      height: 100%;
-      
+      width: 100%;
+
       .carousel-indicators {
         .indicator {
         margin: 0 15px;
@@ -191,21 +192,26 @@ $black: #000;
           &:hover {
             cursor: pointer;
           }
+
+          &.active > img {
+            border: 3px solid #00afea;
+          }
         }
       }
     }
 
     .close {
+      z-index: 1;
+      font-size: 30px;
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 5px;
+      right: 0;
       opacity: 1;
       color: #fff;
     }
   
     .photo {
-      margin-left: 20px;
-      width: 98%;
+      width: 100%;
       height: 100%;
     }
   }
