--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -31,6 +31,7 @@ $black: #000;
 
     .modal-header {
       .close {
+        right: 10px;
         z-index: 1;
         padding: 0;
         color: #3a3a3a;
@@ -53,6 +54,11 @@ $black: #000;
     
     .header .quot {
       color: rgb(182, 120, 28);
+    }
+
+    .close {
+      right: 3px;
+      color: $black;
     }
 
     .lower {
@@ -111,143 +117,6 @@ $black: #000;
           }
         }
       }
-    }
-  }
-}
-
-.preview-modal {
-  display: block;
-  text-align: center;
-  position: fixed;
-  z-index: 1;
-  padding-top: 10px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: $black;
-  background-color: rgba(0,0,0,0.4);
-
-  .modal-content {
-    background-color: #fff;
-    margin: auto;
-    padding: 0;
-    width: 30%;
-    height: 230px;
-    color: $black;
-    border: 3px solid $black;
-  }
-
-  .video-preview {
-    height: 95%;
-    width: 95%;
-    
-    .close {
-      z-index: 1;
-      font-size: 30px;
-      position: absolute;
-      top: 5px;
-      right: 0;
-      opacity: 1;
-      color: #fff;
-
-      &:hover {
-        color: #000;
-      }
-    }
-  
-    .video {
-      width: 100%;
-      height: 100%;
-  
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-
-  .photo-preview {
-    height: 954px;
-    width: 85%;
-  
-    .carousel {
-      width: 100%;
-
-      .carousel-indicators {
-        .indicator {
-        margin: 0 15px;
-        width: 80px;
-        height: 80px;
-
-          .control-photo {
-            width: 100px;
-            height: 80px;
-          }
-          
-          &:hover {
-            cursor: pointer;
-          }
-
-          &.active > img {
-            border: 3px solid #3cc3f0;
-          }
-        }
-      }
-    }
-
-    .close {
-      z-index: 1;
-      font-size: 30px;
-      position: absolute;
-      top: 5px;
-      right: 0;
-      opacity: 1;
-      color: #fff;
-    }
-  
-    .photo {
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-
-.editor-modal {
-  padding-top: 80px;
-
-  .editor {
-    margin-left: 10%;
-    width: 80%;
-    text-align: left;
-
-    .close {
-      z-index: 4;
-      position: absolute;
-      top: 80px;
-      left: 88%;
-      font-size: 40px;
-      opacity: 1;
-      color: #000;
-
-      &:hover {
-        color: rgb(139, 139, 139);
-      }
-    }
-
-    .CodeMirror {
-      height: 800px;
-
-      .CodeMirror-selected {
-        background:#ACCEF7;
-      }
-    }
-
-    .save {
-      font-size: 15px;
-      left: 86%;
-      bottom: 100px;
-      position: absolute;
     }
   }
 }
