Archive item button

--- a/src/components/Lists/Row/Row.scss
+++ b/src/components/Lists/Row/Row.scss
@@ -7,12 +7,16 @@ span.glyphicon {
   vertical-align: text-top;
 }
 
-.glyphicon-folder-close {
+.glyphicon-folder-open {
   color: #e29741;
 }
 
 .glyphicon-file {
-  color: #0cdada;
+  color: #11b1b1;
+}
+
+.glyphicon-book {
+  color: rgb(209, 206, 43);
 }
 
 .glyphicon-picture {
