--- a/src/components/Lists/Row/Row.scss
+++ b/src/components/Lists/Row/Row.scss
@@ -75,7 +75,7 @@ span.glyphicon {
 
 .inactive {
   border-left: 5px solid #999999;
-  background: rgb(195, 195, 195)
+  background: rgba(195, 195, 195, 0.5);
 }
 
 .inactive-selected {
