--- a/src/components/Lists/Row/Row.scss
+++ b/src/components/Lists/Row/Row.scss
@@ -1,6 +1,5 @@
 span {
   text-align: center;
-  margin-right: 10px;
 }
 
 span.glyphicon {
@@ -19,8 +18,8 @@ span.glyphicon {
   color: rgb(209, 206, 43);
 }
 
-.glyphicon-picture {
-  color: #105050;
+.glyphicon-download-alt {
+  color: #929ca3;
 }
 
 .fOwner,
@@ -28,22 +27,25 @@ span.glyphicon {
 .fSize,
 .fDate,
 .fTime {
-  font-size: 18px;
-  margin-left: 2px;
+  font-size: 14px;
   float: right;
-  width: 80px;
+  width: 60px;
   padding-top: 2px;
 }
 
 .fName {
-  padding: 6px 5px 2px 5px;
-  font-size: 17px;
+  margin-left: 15px;
+  padding: 8px 4px 8px 4px;
+  line-height: 34px;
+  font-size: 16px;
   white-space: nowrap; 
   width: 230px; 
   overflow: hidden;
   text-overflow: clip;
+  transition: all ease-out .3s;
 
   &:hover {
+    transition: all ease-out .2s;
     background: rgb(201, 199, 199);
     border-radius: 4px;
     cursor: pointer;
@@ -51,26 +53,36 @@ span.glyphicon {
 }
 
 .fPermissions {
-  margin-left: 40px;
-  margin-right: 30px;
+  margin-right: 10px;
+  margin-left: 35px;
+  color: #727272;
+}
+
+.fDate {
+  color: #727272;
+}
+
+.fTime {
+  color: #727272;
 }
 
 .fSize {
-  width: 120px;
+  width: 100px;
 }
 
 .fOwner {
-  color: rgb(36, 148, 114);
+  color: #81A64F;
   font-style: italic;
+  width: 50px;
 }
 
 .value {
-  color: #1f666e;
+  color: #44a8b3;
 }
 
 .unit {
   font-weight: bolder;
-  color: #333;
+  color: #727272;
 }
 
 .inactive {
