--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -6,6 +6,22 @@
   box-shadow: 0 2px 6px -2px gray;
   background: #F8F9FA;
 
+  .small {
+    display: none;
+  }
+
+  #upload {
+    margin-left: 2px;
+    color: white;
+    border-radius: 6px;
+    background: #AACC0D;
+  
+    &:hover {
+      color: white;
+      background: rgb(184, 221, 17);
+    }
+  }
+
   button {
     margin: 2px;
     margin-right: 30px;
@@ -21,6 +37,46 @@
   }
 
   .btn-hidden {
+    display: none;
+  }
+
+  .upload {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1200px){
+  .btn-group {
+    .small {
+      display: inline-block;
+    }
+
+    .glyphicon {
+      color: #777;
+    }
+
+    .small {
+      &:hover {
+        .glyphicon-file, .glyphicon-folder-close, .glyphicon-download-alt, .glyphicon-copy:hover {
+          color: #aacc0d;
+        }
+
+        .glyphicon-italic, .glyphicon-user, .glyphicon-paste:hover {
+          color: #44a8b3;
+        }
+
+        .glyphicon-trash:hover {
+          color: rgb(221, 57, 57);
+        }
+
+        .glyphicon-book:hover {
+          color: rgb(216, 186, 77);
+        }
+      }
+    }
+  }
+
+  .big {
     display: none;
   }
 }
