--- a/src/components/Path/Path.scss
+++ b/src/components/Path/Path.scss
@@ -1,15 +1,27 @@
 $white: #fff;
 
 .path {
-  padding: 10px 0 0 10px;
-  height: 60px;
+  font-size: 18px;
+  padding: 7px 0 0 10px;
+  height: 40px;
   background: #7b7b7b;
   color: $white;
+  box-shadow: 0 2px 10px -2px gray;
 }
 
 .active-path {
-  padding: 10px 0 0 10px;
-  height: 60px;
+  font-size: 18px;
+  padding: 7px 0 0 10px;
+  height: 40px;
   background: #333;
   color: $white;
+  box-shadow: 0 2px 6px -2px gray;
+}
+
+.clickable {
+  cursor: pointer;
+
+  &:hover {
+    color: goldenrod;
+  }
 }
