--- a/src/components/Preview/Editor/Editor.scss
+++ b/src/components/Preview/Editor/Editor.scss
@@ -1,6 +1,32 @@
 .editor {
   width: 100%;
 
+  .panel-editor {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    margin: 0;
+    background: rgb(255, 255, 255);
+    z-index: 4;
+    transition: 0.5s all ease-in-out;
+    border-bottom: 1px solid black;
+    border-radius: 0;
+
+      button {
+        font-size: 17px;
+        height: 98%;
+        margin: 0 0 0 30px;
+        padding: 0 10px;
+
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
+      }
+  }
+
   .close {
     z-index: 4;
     position: absolute;
@@ -17,6 +43,7 @@
 
   .CodeMirror {
     height: 100vh;
+    padding-top: 4vh;
 
     .CodeMirror-selected {
       background:#ACCEF7;
