--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -20,3 +20,15 @@
 .active {
   background: #fff;
 }
+
+.progress {
+  height: 10px;
+  transition: all ease-out 0.1s;
+}
+
+.Toastify__toast-body {
+  font-size: 20px;
+}
+.Toastify__toast-container {
+  top: 15em;
+}
