--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -3,7 +3,6 @@
   margin: 0;
   font-size: 17px;
   border-radius: 0;
-  box-shadow: 0 2px 6px -2px gray;
   background: #F8F9FA;
 
   .small {
@@ -61,19 +60,19 @@
 
     .small {
       &:hover {
-        .glyphicon-file, .glyphicon-folder-close, .glyphicon-download-alt, .glyphicon-copy:hover {
+        .glyphicon-file, .glyphicon-folder-close, .glyphicon-download-alt, .glyphicon-copy {
           color: #aacc0d;
         }
 
-        .glyphicon-italic, .glyphicon-user, .glyphicon-paste:hover {
+        .glyphicon-italic, .glyphicon-user, .glyphicon-paste {
           color: #44a8b3;
         }
 
-        .glyphicon-trash:hover {
+        .glyphicon-trash {
           color: rgb(221, 57, 57);
         }
 
-        .glyphicon-book:hover {
+        .glyphicon-book {
           color: rgb(216, 186, 77);
         }
       }
