--- a/src/components/Path/Path.scss
+++ b/src/components/Path/Path.scss
@@ -1,21 +1,131 @@
 $white: #fff;
 
 .path {
+  display: flex;
+  justify-content: space-between;
   font-size: 18px;
-  padding: 7px 0 0 10px;
+  padding: 1px 0 0 10px;
   height: 40px;
   background: #7b7b7b;
   color: $white;
   box-shadow: 0 2px 10px -2px gray;
+
+  .btn-group {
+    width: 75px;
+    background: none;
+    box-shadow: none;
+    background: #7b7b7b;
+
+    .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
+      border-color: #7b7b7b;
+      background-color: #7b7b7b;
+    }
+
+    button {
+      padding-right: 5px;
+      color: white;
+      background: #7b7b7b;
+      transition: none;
+
+      span {
+        color: #fff;
+        padding: 0 0 0 5px;
+        vertical-align: text-top;
+      }
+
+      &:active, &:focus {
+        background-color: #7b7b7b;
+        border-color: #7b7b7b;
+      }
+    }
+
+    .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
+      box-shadow: none;
+      outline: none;
+      background-color: #7b7b7b;
+      border-color: #7b7b7b;
+    }
+
+    .btn-secondary {
+      &:hover {
+        color: rgb(1, 148, 148);
+        background: #7b7b7b;
+        border-color: #7b7b7b;
+
+        span {
+          color: rgb(1, 148, 148);
+        }
+      }
+    }
+  }
+
+  span {
+    padding-top: 7px;
+  }
 }
 
 .active-path {
+  display: flex;
+  justify-content: space-between;
   font-size: 18px;
-  padding: 7px 0 0 10px;
+  padding: 1px 0 0 10px;
   height: 40px;
   background: #333;
   color: $white;
   box-shadow: 0 2px 6px -2px gray;
+
+  .btn-group {
+    width: 75px;
+    background: none;
+    box-shadow: none;
+    background: #333;
+
+    .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
+      border-color: #333;
+      background-color: #333;
+    }
+
+    button {
+      padding-right: 5px;
+      color: white;
+      background: #333;
+      transition: none;
+
+      span {
+        color: #fff;
+        padding: 0 0 0 5px;
+        vertical-align: text-top;
+      }
+
+      &:active, &:focus {
+        background-color: #333;
+        border-color: #333;
+      }
+    }
+
+    .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
+      box-shadow: none;
+      outline: none;
+      background-color: #333;
+      border-color: #333;
+    }
+
+    .btn-secondary {
+      &:hover {
+        color: rgb(1, 148, 148);
+        background: #333;
+        border-color: #333;
+
+        span {
+          color: rgb(1, 148, 148);
+        }
+      }
+    }
+  }
+
+  span {
+    padding-top: 7px;
+  }
 }
 
 .clickable {
