--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  top: 50%;
   right: 45%;
+  bottom: 0;
 
   div {
     width: 60px;
