--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -18,8 +18,8 @@ $black: #000;
     background-color: #fff;
     margin: auto;
     border: 1px solid #888;
-    width: 30%;
-    height: 230px;
+    width: 25%;
+    height: auto;
     color: $black;
     border: 3px solid $black;
     margin-top: 100px;
@@ -33,7 +33,7 @@ $black: #000;
       .close {
         right: 10px;
         z-index: 1;
-        padding: 0;
+        padding: 2px 10px 2px 2px;
         color: #3a3a3a;
         float: right;
         font-size: 28px;
@@ -47,8 +47,40 @@ $black: #000;
         }
       }
 
+      .replace {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
+
       .quot {
         color: rgb(182, 120, 28);
+      }
+    }
+
+    .modal-footer {
+      & button {
+        background: white;
+        border-color: white;
+        color: black;
+        
+        &:hover {
+          background: #d9534f;
+          border-color: #d9534f;
+          color: white;
+        }
+      }
+
+      button + button {
+        padding: 6px 30px;
+        background: #CACE33;
+        border-color: #CACE33;
+
+        &:hover {
+          background: #00cccb;
+          border-color: #00cccb;
+          color: white;
+        }
       }
     }
     
@@ -61,30 +93,33 @@ $black: #000;
       right: 0;
       color: $black;
     }
-
-    .lower {
-      margin-top: 30px;
-    }
   }
 
   .nothing-selected {
-    height: 170px;
 
     .modal-footer {
       margin-top: 45px;
+
+      button {
+        background: #d9534f;
+        border-color: #d9534f;
+        color: white;
+      }
     }
   }
-  
-  .delete {
-    height: 180px;
 
-    .header h3 {
-      padding: 0 50px;
+  .delete .modal-header {
+    border-bottom: none;
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 15px;
     }
   }
   
   .permissions {
-    height: 560px;
+    height: auto;
 
     .error, &:focus {
       border: 1px solid red;
@@ -93,7 +128,7 @@ $black: #000;
     input[type="text"] {
       size: 40px;
       width: 60px;
-      margin: 0 0 10px 200px;
+      margin: auto auto 10px auto;
       display: inline-block;
     }
 
