--- a/src/components/Preview/Editor/Editor.scss
+++ b/src/components/Preview/Editor/Editor.scss
@@ -7,8 +7,9 @@
     width: 100%;
     height: 40px;
     position: absolute;
+    padding: 3px;
     margin: 0;
-    background: rgb(255, 255, 255);
+    background: #000000bf;
     z-index: 4;
     transition: 0.5s all ease-in-out;
     border-bottom: 1px solid black;
