--- a/src/components/Preview/Photo/Photo.scss
+++ b/src/components/Preview/Photo/Photo.scss
@@ -2,17 +2,24 @@
   width: 100%;
   position: relative;
 
-  .glyphicon {
-    color: black;
+  a {
+    width: 5%;
   }
 
   .carousel-inner {
     .carousel-item {
+      background: #000;
       width: 100%;
-      max-height: 100vh;
+      height: 100vh;
         
-        img {
-          width: 100%;
+        .gif {
+          height: 50%;
+          width: 50%;
+        }
+
+        .img {
+          height: 90vh;
+          width: 90%;
         }
     }
   }
@@ -43,12 +50,16 @@
   }
 }
 
-.close {
+span.close {
   z-index: 10;
   font-size: 30px;
   position: absolute;
   top: 5px;
   right: 10px;
   opacity: 1;
-  color: #fff;
+  color: white;
+
+  &:hover {
+    color: white;
+  }
 }
