--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -1,5 +1,9 @@
 .progress {
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  width: 100%;
   margin: 0;
-  height: 1px;
+  height: 6px;
   display: inline-table;
 }
