--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,13 +1,7 @@
-.wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  right: 45%;
-  bottom: 0;
-
-  div {
-    width: 60px;
-    height: 60px;
-  }
+.spinner-wrapper {
+  position: absolute;
+  bottom: 5px;
+  width: 15%;
+  left: 42%;
+  height: 10px;
 }
