--- a/src/components/Lists/Row/Row.scss
+++ b/src/components/Lists/Row/Row.scss
@@ -1,65 +1,63 @@
-span {
-  text-align: center;
-}
-
-.list-container span.glyphicon, .list .list-container ul li i {
+.list .list-container ul li svg {
+  width: 25px;
   vertical-align: top;
-  display: inline-block;
-  line-height: 34px;
+  margin-top: 9px;
+  margin-left: 10px;
 }
 
-.list .list-container ul li i {
-  width: 16px;
-  height: 19px;
-  padding-left: 2px;
-}
-
-.fa-html5 {
+.html5 {
   color: #f16529;
 }
 
-.fa-file-alt {
+.file-alt {
   color: #20d2d1;
 }
 
-.fa-js-square {
-  color: #f7df1c;
-
-  &:before {
-    background: black;
-    border: 0.4px solid black;
+.list .list-container ul li {
+  .marker {
+    float: left;
+    width: 4px;
+    height: 34px;
+    margin-right: 5px;
   }
 }
 
-.fa-php {
+.list .list-container ul li .js {
+  width: 16px;
+  color: #f7df1c;
+  background: black;
+  margin: 9px 4px 0 15px;
+}
+
+.php {
   color: #777bb3;
 }
 
-.fa-css3 {
+.css3 {
   color: #0079cb;
 }
 
-.fa-sass {
+.sass {
   color: #cd6699;
 }
 
-.glyphicon-picture {
+.image {
   color: #36afae;
 }
 
-.glyphicon-folder-open {
+.folder-open {
   color: #e29741;
 }
 
-.glyphicon-file {
+.file {
   color: #11b1b1;
 }
 
-.glyphicon-book {
+.archive {
   color: rgb(209, 206, 43);
 }
 
-.glyphicon-download-alt {
+.download {
   color: #929ca3;
 }
 
@@ -74,8 +72,9 @@ span {
   padding-top: 2px;
 }
 
-.fName {
-  width: 230px;
+.list .list-container ul li .fName {
+  margin-left: 5px;
+  width: 260px;
   display: inline-block;
   overflow: hidden;
   text-overflow: clip;
@@ -83,9 +82,9 @@ span {
   .name {
     padding: 0 5px;
     float: left;
-    margin-left: 15px;
+    margin-left: 5px;
     line-height: 34px;
-    font-size: 16px;
+    font-size: 15px;
     white-space: nowrap; 
     transition: all ease-out .3s;
   
@@ -98,18 +97,26 @@ span {
   }
 }
 
-.fPermissions {
-  margin-right: 10px;
+.list .list-container ul li.active .fName .name:hover {
+  background: #F0B607;
+  color: black;
+}
+
+.list .list-container ul li .fPermissions {
   margin-left: 35px;
+  width: 50px;
   color: #727272;
+  font-size: 11px;
 }
 
-.fDate {
+.list .list-container ul li .fDate .date {
   color: #727272;
+  font-size: 11px;
 }
-
-.fTime {
+.list .list-container ul li .fTime {
   color: #727272;
+  font-size: 11px;
+  width: 54px;
 }
 
 .fSize {
@@ -118,10 +125,12 @@ span {
   width: 95px;
 }
 
-.fOwner {
+.list .list-container ul li .fOwner {
   color: #81A64F;
   font-style: italic;
   width: 50px;
+  font-size: 12px;
+  margin-right: 5px;
 }
 
 .value {
@@ -133,9 +142,16 @@ span {
   color: #727272;
 }
 
-.inactive {
-  border-left: 5px solid #999999;
-  background: rgba(195, 195, 195, 0.5);
+li.inactive {
+  .marker {
+    float: left;
+    width: 4px;
+    height: 34px;
+    margin-right: 5px;
+    background: rgb(163, 163, 163);
+  }
+
+  background: rgb(201, 199, 199);
 }
 
 .inactive-selected {
