--- a/src/components/Preview/Editor/Editor.scss
+++ b/src/components/Preview/Editor/Editor.scss
@@ -49,6 +49,10 @@
     .CodeMirror-selected {
       background:#ACCEF7;
     }
+
+    .CodeMirror-scroll {
+      font-size: 14px;
+    }
   }
 
   .save {
