--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -5,7 +5,7 @@ $black: #000;
   text-align: center;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
+  padding-top: 200px;
   left: 0;
   top: 0;
   width: 100%;
@@ -15,36 +15,33 @@ $black: #000;
   background-color: rgba(0,0,0,0.4);
 
   .modal-content {
-    background-color: #fff;
+    box-shadow: 0 2px 11px 0 rgba(0, 0, 0, 0.5);
+    background: #333;
     margin: auto;
     border: 1px solid #888;
     width: 25%;
     height: auto;
-    color: $black;
-    border: 3px solid $black;
+    color: white;
     margin-top: 100px;
 
-    .modal-body input {
-      margin-top: 10px;
-      width: 60%;
+    .modal-body {
+      margin-bottom: 40px;
+
+      input {
+        background: #333;
+        border: 1px solid #111;
+        color: white;
+        margin-top: 10px;
+        width: 85%;
+      }
     }
 
     .modal-header {
-      .close {
-        right: 10px;
-        z-index: 1;
-        padding: 2px 10px 2px 2px;
-        color: #3a3a3a;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-  
-        &:hover,&:focus{
-          color: #333;
-          outline: none;
-          text-decoration: none;
-          cursor: pointer;
-        }
+      border-bottom: none;
+      padding-bottom: 0;
+
+      h3 {
+        color: #EBE697;
       }
 
       .replace {
@@ -59,16 +56,28 @@ $black: #000;
     }
 
     .modal-footer {
-      & button {
-        background: white;
-        border-color: white;
-        color: black;
-        
-        &:hover {
-          background: #d9534f;
-          border-color: #d9534f;
-          color: white;
+      border-top: 1px solid #555;
+
+      button {
+        color: white;
+        border-color: none;
+        background: none;
+        text-transform: uppercase;
+        font-size: 12px;
+      }
+
+      button.btn-danger {
+        border-color: transparent;
+
+        &:focus {
+          outline: none;
+          border: none;
         }
+      }
+
+      button.btn-danger:hover {
+        background: #00cccb;
+        border-color: #00cccb;
       }
 
       button + button {
@@ -96,9 +105,12 @@ $black: #000;
   }
 
   .nothing-selected {
+    h3 {
+      padding: 15px;
+    }
 
     .modal-footer {
-      margin-top: 45px;
+      margin-top: 20px;
 
       button {
         background: #d9534f;
@@ -110,6 +122,7 @@ $black: #000;
 
   .delete .modal-header {
     border-bottom: none;
+    padding-bottom: 30px;
 
     .close {
       position: absolute;
@@ -120,7 +133,9 @@ $black: #000;
   
   .permissions {
     height: auto;
-
+    width: 30%;
+    margin-top: 0;
+    
     .error, &:focus {
       border: 1px solid red;
     }
@@ -153,6 +168,7 @@ $black: #000;
           font-size: 18px;
 
           input {
+            margin-top: 6px;
             margin-right: 5px;
           }
         }
