--- a/src/components/Path/Dropdown/Dropdown.scss
+++ b/src/components/Path/Dropdown/Dropdown.scss
@@ -1,3 +1,7 @@
+.btn-group button {
+  border: 0;
+}
+
 .dropdown-menu {
   padding: 0;
 
@@ -16,7 +20,7 @@
       height: 37.5px;
       border-top: 1px solid #dbdbdb;
 
-      .glyphicon-arrow-down {
+      .arrow-down {
         float: right;
       }
 
@@ -41,4 +45,8 @@
       }
     }
   }
+}
+
+.dropdown-menu.show{
+  transform: translate3d(-57%, 39px, 0px)!important;
 }
