--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -39,6 +39,7 @@ $black: #000;
     .modal-header {
       border-bottom: none;
       padding-bottom: 0;
+      word-break: break-word;
 
       h3 {
         color: #EBE697;
@@ -64,6 +65,11 @@ $black: #000;
         background: none;
         text-transform: uppercase;
         font-size: 12px;
+
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
       }
 
       button.btn-danger {
