--- a/src/components/ControlPanel/ListItem/ListItem.scss
+++ b/src/components/ControlPanel/ListItem/ListItem.scss
@@ -8,6 +8,7 @@
   padding: 15px;
   margin: 5px 0;
   border-left: 2px solid white;
+  border-bottom: 1px solid #eee;
   color: rgb(104, 104, 104);
 
   &:hover .l-col .date + div svg,
