--- a/src/containers/ControlPanelContent/ControlPanelContent.scss
+++ b/src/containers/ControlPanelContent/ControlPanelContent.scss
@@ -1,5 +1,10 @@
 .content {
   padding: 0 20%;
+
+  > div > div.total {
+    font-size: 12px;
+    color: #929292;
+  }
 }
 
 @media (max-width: 1350px) {
