Template styles changed

--- a/src/components/ControlPanel/Container/Container.scss
+++ b/src/components/ControlPanel/Container/Container.scss
@@ -14,6 +14,10 @@
   width: 20%;
 }
 
+.w-25 {
+  width: 25%;
+}
+
 .w-30 {
   width: 30%;
 }
@@ -24,6 +28,10 @@
 
 .w-40 {
   width: 40%;
+}
+
+.w-45 {
+  width: 45%;
 }
 
 .w-50 {
