--- a/src/components/ControlPanel/ListItem/ListItem.scss
+++ b/src/components/ControlPanel/ListItem/ListItem.scss
@@ -6,7 +6,7 @@
   font-size: 18px;
   position: relative;
   padding: 15px;
-  margin: 5px 0;
+  margin: 2px 0;
   border-left: 2px solid white;
   border-bottom: 1px solid #eee;
   color: rgb(104, 104, 104);
@@ -14,6 +14,28 @@
   &:hover .l-col .date + div svg,
   &:hover .actions {
     opacity: 1;
+  }
+
+  .r-col {
+    .stats {
+      div > span {
+        width: 50%;
+        text-align: left;
+      }
+  
+      .c-2 div > span {
+        width: 60%;
+      }
+
+      .c-3 {
+        padding-right: 3rem;
+      }
+    }
+
+    div.bandwidth span,
+    div.disk span {
+      width: auto;
+    }
   }
 
   .date {
