--- a/src/containers/ControlPanelContent/ControlPanelContent.scss
+++ b/src/containers/ControlPanelContent/ControlPanelContent.scss
@@ -2,6 +2,8 @@
   padding: 0 20%;
 
   > div > div.total {
+    margin-top: 25px;
+    margin-left: 16%;
     font-size: 12px;
     color: #929292;
   }
