Created own toolbar for each existing list template

--- a/src/components/MainNav/Toolbar/Toolbar.scss
+++ b/src/components/MainNav/Toolbar/Toolbar.scss
@@ -12,54 +12,6 @@
   border-bottom: 1px solid #e0e0e0;
   padding-top: 5px;
 
-  .l-menu {
-    transform: translate(35px, 50%);
-
-    button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #aacb0c;
-      border-radius: 100%;
-      color: white;
-      width: 45px;
-      height: 43px;
-      outline: none;
-      border: none;
-
-      &:hover {
-        background: #c1e411;
-
-        span.add {
-          display: block;
-        }
-      }
-
-      span.add {
-        width: max-content;
-        display: none;
-        padding: 4px 10px 4px 25px;
-        background: #aacb0c;
-        border-radius: 15px;
-        color: white;
-        font-size: 15px;
-        position: absolute;
-        left: 25px;
-        z-index: -1;
-        text-align: right;
-      }
-
-      svg {
-        width: 31px;
-        height: 21px;
-      }
-    }
-  }
-
-  .l-menu.none {
-    display: none;
-  }
-
   .r-menu {
     display: flex;
     justify-content: center;
@@ -146,6 +98,14 @@
         background-color: white;
       }
     }
+  }
+}
+
+.toolbar.justify-right {
+  justify-content: flex-end;
+
+  .r-menu > div > * {
+    margin: 0 10px;
   }
 }
 
