--- a/src/components/ControlPanel/ListItem/ListItem.scss
+++ b/src/components/ControlPanel/ListItem/ListItem.scss
@@ -11,9 +11,15 @@
   border-bottom: 1px solid #eee;
   color: rgb(104, 104, 104);
 
-  &:hover .l-col .date + div svg,
+  &:hover .l-col div.star svg,
   &:hover .actions {
     opacity: 1;
+  }
+
+  .l-col {
+    .text-status {
+      font-size: 10px;
+    }
   }
 
   .r-col {
@@ -50,8 +56,22 @@
 .list-item.starred {
   border-left: 2px solid #ff6701;
 
-  .l-col .date + div > svg {
+  .l-col div.star > svg {
     opacity: 1;
     color: #ff6701;
+  }
+}
+
+.list-item.outdated {
+  background: #ffcaca;
+  border-left: 5px solid #ff6f6f;
+}
+
+.list-item.toggled.outdated {
+  background: #755d5d;
+  color: black;
+
+  .stat {
+    color: black;
   }
 }
