--- a/src/components/ControlPanel/ListItem/ListItem.scss
+++ b/src/components/ControlPanel/ListItem/ListItem.scss
@@ -6,9 +6,8 @@
   font-size: 18px;
   position: relative;
   padding: 15px;
-  margin: 2px 0;
   border-left: 2px solid white;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ddd;
   color: rgb(104, 104, 104);
 
   &:hover .l-col div.star svg,
