--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -101,7 +101,7 @@
       }
     }
 
-    div + div{
+    div + div {
       color: #a4abad;
       font-weight: 700;
     
@@ -110,8 +110,12 @@
       }
     }
 
-    div + div + div:hover {
-      color: #C0E60E;
+    div + div + div a {
+      font-weight: 100;
+
+      &:hover {
+        color: #C0E60E;
+      }
     }
   }
 }
