--- a/src/components/WebDomain/WebDomain.scss
+++ b/src/components/WebDomain/WebDomain.scss
@@ -10,3 +10,14 @@
     }
   }
 }
+
+.r-col .name .dns-name-span {
+  font-style: italic;
+  color: #858585;
+  font-size: 14px;
+  margin-left: 2rem;
+}
+
+div.crossed {
+  text-decoration: line-through;
+}
