--- a/src/components/MainNav/Toolbar/Toolbar.scss
+++ b/src/components/MainNav/Toolbar/Toolbar.scss
@@ -127,6 +127,12 @@
   box-shadow: rgba(200, 200, 200, 0.5) 0px 5px 3px 0px;
 }
 
+@media (max-width: 1350px) {
+  .toolbar {
+    padding: 5px 10% 0;
+  }
+}
+
 @media (max-width: 450px) {
   .mobile-toolbar .toolbar {
     display: flex;
