--- a/src/components/ControlPanel/ListItem/ListItem.scss
+++ b/src/components/ControlPanel/ListItem/ListItem.scss
@@ -5,12 +5,12 @@
   padding-left: 15px;
   font-size: 18px;
   position: relative;
-  padding: 15px;
+  padding: 15px 0;
   border-left: 2px solid white;
   border-bottom: 1px solid #ddd;
   color: rgb(104, 104, 104);
 
-  &:hover .l-col div.star svg,
+  &:hover .l-col div.star div svg,
   &:hover .actions {
     opacity: 1;
   }
@@ -18,6 +18,15 @@
   .l-col {
     .text-status {
       font-size: 10px;
+    }
+
+    div.star {
+      display: flex;
+      align-items: center;
+  
+      div.checkbox {
+        margin: 0 35% 4px 0;
+      }
     }
   }
 
@@ -45,6 +54,7 @@
 
   .date {
     font-size: 13px;
+    margin: 20px 0 10px;
   }
 }
 
@@ -55,9 +65,11 @@
 .list-item.starred {
   border-left: 2px solid #ff6701;
 
-  .l-col div.star > svg {
-    opacity: 1;
-    color: #ff6701;
+  .l-col div.star {
+    div > svg {
+      opacity: 1;
+      color: #ff6701;
+    }
   }
 }
 
