Refactored Web Domains tab

--- a/src/components/WebDomain/WebDomain.scss
+++ b/src/components/WebDomain/WebDomain.scss
@@ -11,11 +11,26 @@
   }
 }
 
-.r-col .name .dns-name-span {
-  font-style: italic;
-  color: #858585;
-  font-size: 14px;
-  margin-left: 2rem;
+.r-col {
+  .c-2 span.stat,
+  .c-3 span.stat {
+    margin-left: 1rem;
+  }
+
+  .name {
+    display: flex;
+    align-items: center;
+
+    > div:nth-child(1) {
+      width: 34%;
+    }
+
+    .dns-name-span {
+      font-style: italic;
+      color: #858585;
+      font-size: 14px;
+    }
+  }
 }
 
 div.crossed {
