--- a/src/containers/CronJobs/CronJobs.scss
+++ b/src/containers/CronJobs/CronJobs.scss
@@ -14,3 +14,20 @@
     }
   }
 }
+
+.cron-wrapper {
+  .r-col .stats > div {
+    flex: none;
+    width: 17%;
+  }
+
+  .actions {
+    > div:nth-child(1) a:hover {
+      background: #9fbf0c;
+    }
+
+    > div:nth-child(2) a:hover {
+      background: #ff3438;
+    }
+  }
+}
