--- a/src/components/RRD/RRD.scss
+++ b/src/components/RRD/RRD.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid #eee;
+  position: relative;
 
   .l-col {
     .date {
