--- a/src/components/Statistic/Statistic.scss
+++ b/src/components/Statistic/Statistic.scss
@@ -16,7 +16,25 @@
       font-size: 32px;
     }
 
+    .c-1 {
+      .bandwidth, .disk {
+        width: 220px;
+      }
+
+      div.sub-disk-stats {
+        width: 250px;
+      }
+    }
+
+    .c-2 {
+      margin-right: 0;
+    }
+
     .c-3.w-35 {
+      span.stat {
+        width: 80px;
+      }
+
       div > span {
         width: 50%;
         text-align: left;
