--- a/src/containers/Statistics/Statistics.scss
+++ b/src/containers/Statistics/Statistics.scss
@@ -1,10 +1,22 @@
 .statistics-list {
   color: #686868;
+
+  .toolbar {
+    padding-bottom: 5px;
+  }
+
+  .l-col {
+    width: 14%;
+
+    div.date {
+      margin-top: 25px;
+    }
+  }
 }
 
 .total {
-    margin-top: 25px;
-    margin-left: 15%;
-    font-size: 12px;
-    color: #929292;
+  margin-top: 25px;
+  margin-left: 15%;
+  font-size: 12px;
+  color: #929292;
 }
